# s3

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  LochS3.cyberduckprofile  Makefile  README.md  SECURITY.md  cliff.toml  docker-compose.multiuser.yml  docker-compose.yml
.github/workflows/: build.yml  ci.yml  docker.yml  release.yml
documentation/: api.md  aws-cli.md  install.md  usage.md
src/: auth.rs  cors.rs  encryption.rs  error.rs  lib.rs  main.rs  policy.rs  router.rs  users.rs  xml.rs
src/handlers/: bucket.rs  cors.rs  encryption.rs  mod.rs  multipart.rs  object.rs  policy.rs  users.rs  versioning.rs
src/quota/: size.rs
src/storage/: acl.rs  bucket.rs  cors.rs  encryption.rs  mod.rs  multipart.rs  object.rs  policy.rs  versioning.rs
tests/: integration.rs
